# picca

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README  README.md  pylintrc  pyproject.toml  pytest.ini  requirements-extras.txt  requirements-mpi.txt  requirements-python2.txt  requirements.txt  setup.py
.github/workflows/: autoyapf.yml  bump_version.yml  publish-to-test-pypi.yml  pylint.yml  python_package.yml
data/: README.md  readme.txt
data/Blomqvistetal2019/: cross.chisq
data/dr14/: readme.txt
data/duMasdesBourbouxetal2017/: readme.txt
docs/: Makefile  conf.py  index.rst
etc/: dr12-sky-mask.txt  dr14-line-sky-mask.txt  list_veto_line.txt  list_veto_line_Pk1D.txt
examples/delta_extraction/: desi_config_explanatory.ini  desi_everest_produce_delta_p1d.ini  desi_pk1d_fuji_produce_delta.ini  dr16_produce_delta_calib.ini  dr16_produce_delta_calib2.ini  dr16_produce_delta_lya.ini  dr16_produce_delta_lyb.ini
examples/templates/: Planck18.ini  PlanckDR12_kmax_params.ini
picca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py/picca/: .prep_del.py.swp  Pk1D.py  __init__.py  _version.py  bal_tools.py  blinding_a.py  cf.py  co.py  constants.py  converters.py  data.py  dla.py  io.py  pk1d.py  postproc_pk1d.py  postproc_pk1d_oldoutput.py  prep_Pk1D.py  prep_del.py  prep_pk1d.py  raw_io.py  utils.py  wedgize.py  wick.py  xcf.py
py/picca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py/picca_bin/: picca_coadd_zint.py  picca_deltas.py  picca_export.py  picca_export_coadd_zint.py
py/pylya/: cf.py  constants.py  data.py  dla.py  io.py  prep_del.py  utils.py  wick.py  xcf.py  xcf_forest.py
resources/: list_veto_line.txt
script/: picca_cf.py  picca_compute_fvoigt.py
tutorials/: DR16_tutorial_continuum.ipynb  QA_plots.ipynb  do_plotSpec.py  export_stacked_correlation.py  picca_export_stack_realizations.py  picca_export_stacked_correlation.py  picca_generate_cat.py  picca_plotSpec.py  utils.py
tutorials/cf_hack/: picca_cf.sh
tutorials/data/: picca_plot_chi2_surface.py
tutorials/delta_extraction/: adding_new_corrections.ipynb  adding_new_data.ipynb  adding_new_expected_flux.ipynb  picca_delta_extraction_configuration_tutorial.ipynb
tutorials/desi/: QA_mocks.ipynb  do_convert_transmission.py  do_convert_zcat.py  picca_convert_transmission.py  picca_convert_zcat.py
(+631 files in other folders)
